# t-bank-shoping

./: AUTH_README.md  Makefile  README.md  WORKFLOW.md  pyproject.toml  requirements.txt
conf/: README.md  base_config.yaml  config.yaml  lgbm_baseline_exp001.yaml
conf/base/inference/: example.yaml
conf/base/metric/: accuracy.yaml  average_precision.yaml  f1_score.yaml  log_loss.yaml  mae.yaml  map_at_20.yaml  mape.yaml  metrics.md  precision.yaml  qwk.yaml  r2_score.yaml  recall.yaml  rmse.yaml  rmsle.yaml  roc_auc.yaml  top_k_accuracy.yaml
conf/base/model/: catboost.yaml  extra_trees.yaml  lgbm.yaml  linear_svc.yaml  logit.yaml  models.md  rbf_svc.yaml  rf.yaml  rf_regressor.yaml  ridge.yaml  xgb.yaml
conf/base/pseudo_labeling/: pl_lgbm_v1.yaml
conf/base/selection/: default.yaml
conf/base/stacking/: README.md  example.yaml
conf/base/tuning/: lgbm_default.yaml
conf/base/validation/: README.md
conf/projects/t_shopping/: t_shopping.yaml
conf/projects/t_shopping/experiment/: exp001_t_shopping_lgbm.yaml
conf/projects/t_shopping/feature_engineering/: README.md  example.yaml  t_shopping_v1.yaml  v1.yaml
conf/projects/t_shopping/features/: README.md  t_shopping_v1.yaml
conf/projects/t_shopping/model/: lgbm_ranking.yaml
conf/projects/t_shopping/validation/: t_shopping_cv.yaml
docs/feature_generators/: README.md
docs/feature_generators/advanced/: README.md  model_based.md  neighbors.md
docs/feature_generators/categorical/: README.md  combination.md  nominal.md  ordinal.md  target_based.md
docs/feature_generators/numerical/: README.md  binning.md  flags.md  scaling.md  transformations.md
docs/feature_generators/relational/: README.md  aggregation.md  datetime.md  interaction.md
docs/feature_generators/text/: README.md  bow.md  embeddings.md  statistics.md
src/: README.md  exceptions.py  utils.py
src/features/: README.md  __init__.py  aggregation.py  base.py  datetime.py  interaction.py
src/features/advanced/: autoencoder.py  matrix_factorization.py  model_based.py
src/features/categorical/: nominal.py  target_based.py
src/features/numerical/: scaling.py  transformations.py
src/features/text/: bow.py  embeddings.py  transformer.py
src/metrics/: README.md
src/models/: README.md  __init__.py  base.py  catboost.py  lgbm.py  sklearn_model.py  xgb.py
src/scripts/: make_features.py  predict.py  pseudo_label.py  select_features.py  stack.py  train.py  tune.py
src/validation/: base.py  common.py  time_series.py
